added contact page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,11 +14,11 @@
 <body>
 {% block header %}
     <nav class="navbar-container">
-        <img class="logo-img" src="{{ asset('styles/app.css') }}" alt="a text logo">
+        <img class="logo-img" src="{{ asset('assets/logo.png') }}" alt="a text logo">
         <ul class="navbar-elements">
             <li class="navbar-element"><a class="navbar-a-element" href="#">Home</a></li>
             <li class="navbar-element"><a class="navbar-a-element" href="#">Projects</a></li>
-            <li class="navbar-element"><a class="navbar-a-element" href="#">Contact</a></li>
+            <li class="navbar-element"><a class="navbar-a-element" href="{{ path('contact_index') }}">Contact</a></li>
         </ul>
     </nav>
 {% endblock %}
