create database sqlite

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
         <img class="logo-img" src="{{ asset('assets/logo.png') }}" alt="a text logo">
         <ul class="navbar-elements">
             <li class="navbar-element"><a class="navbar-a-element" href="#">Home</a></li>
-            <li class="navbar-element"><a class="navbar-a-element" href="#">Projects</a></li>
+            <li class="navbar-element"><a class="navbar-a-element" href="{{ path('project_index') }}">Projects</a></li>
             <li class="navbar-element"><a class="navbar-a-element" href="{{ path('contact_index') }}">Contact</a></li>
         </ul>
     </nav>
