--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
+            <link rel="stylesheet" href="{{ asset('styles/fontawesome-free-5.15.4-web/css/all.css') }}">
         {% endblock %}
 
         {% block javascripts %}{% endblock %}
@@ -16,9 +17,23 @@
     <nav class="navbar-container">
         <img class="logo-img" src="{{ asset('assets/logo.png') }}" alt="a text logo">
         <ul class="navbar-elements">
-            <li class="navbar-element"><a class="navbar-a-element" href="#">Home</a></li>
-            <li class="navbar-element"><a class="navbar-a-element" href="{{ path('project_index') }}">Projects</a></li>
-            <li class="navbar-element"><a class="navbar-a-element" href="{{ path('contact_index') }}">Contact</a></li>
+            <li class="navbar-element"><a class="navbar-a-element" href="{{ path('index') }}">Home<i
+                            class="fas fa-angle-right"></i></a></li>
+            <li class="navbar-element"><a class="navbar-a-element" href="{{ path('project_index') }}">Projects<i
+                            class="fas fa-angle-right"></i></a></li>
+            <li class="navbar-element"><a class="navbar-a-element" href="{{ path('contact_index') }}">Contact<i
+                            class="fas fa-angle-right"></i></a></li>
+            {% if is_granted('ROLE_ADMIN') %}
+                <li class="navbar-element"><a class="navbar-a-element" href="{{ path('admin_index') }}">Admin<i
+                                class="fas fa-angle-right"></i></a></li>
+            {% endif %}
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <li class="navbar-element"><a class="navbar-a-element" href="{{ path('app_logout') }}">Log out<i
+                                class="fas fa-angle-right"></i></a></li>
+            {% else %}
+                <li class="navbar-element"><a class="navbar-a-element" href="{{ path('login') }}">Log in<i
+                                class="fas fa-angle-right"></i></a></li>
+            {% endif %}
         </ul>
     </nav>
 {% endblock %}
