--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -6,7 +6,7 @@
     <div class="container-projects">
         {% for project in projects %}
         <div class="container-project">
-            <h2>{{ project.title }}</h2>
+            <h2 class="project-title"><i class="fas fa-book-open"></i>{{ project.title }}</h2>
             <p>{{ project.content }}</p>
             <span>{{ project.category }}</span>
         </div>
