--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -6,7 +6,12 @@
 }
 
 html {
-    background-image: url("../../images/bgsmall.jpg");
+
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 /* logo */
@@ -114,25 +119,47 @@ html {
 
 .administration-project-list {
     display: flex;
-   align-items: flex-start;
+    align-items: flex-start;
     flex-direction: column;
     background-color: #e3e3e3;
     width: 90%;
     list-style: none;
     margin: 1rem auto;
-    padding: 1rem;
     border-radius: 5px;
+}
+
+.administration-project-list:hover {
+    background-color: #bdbdbd;
 }
 
 .administration-project-entity {
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
-    padding: .3rem;
+    position: relative;
+    padding: .5rem;
+    cursor: pointer;
 }
 
 .administration-format-project-entity {
     text-transform: uppercase;
     border-radius: 10px;
     margin-right: auto;
+}
+
+.administration-modal-project-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.administration-modal-project-content input {
+    margin: .3rem;
+}
+
+.administration-modal-close-button {
+    text-align: center;
+    background-color: #e5e5e5;
+    padding: .2rem;
+    border-radius: 5px;
+    width: 40%;
+    margin: .5rem auto 0 auto;
 }
