--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,13 +3,17 @@
 <head>
     {% block head %}
         <meta charset="UTF-8">
+        <link rel="icon" href="{{ asset('assets/logo.png') }}" />
         <title>{% block title %}Artist Lobby{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
             <link rel="stylesheet" href="{{ asset('styles/fontawesome-free-5.15.4-web/css/all.css') }}">
+            <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+            <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
         {% endblock %}
-
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+        {% endblock %}
     {% endblock %}
 </head>
 <body>
