--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -174,6 +174,15 @@ a {
     background-color: #bdbdbd;
 }
 
+.fa-plus {
+    margin-left: .5rem;
+    cursor: pointer;
+}
+
+.fa-plus:hover {
+    color: #28A74B;
+}
+
 /*default hiding*/
 
 #ajax-success-div {
