--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,17 +3,24 @@
 <head>
     {% block head %}
         <meta charset="UTF-8">
-        <link rel="icon" href="{{ asset('assets/logo.png') }}" />
+        <link rel="icon" href="{{ asset('assets/logo.png') }}"/>
         <title>{% block title %}Artist Lobby{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('styles/fontawesome-free-5.15.4-web/css/all.css') }}">
-            <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-            <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
-        {% endblock %}
-        {% block javascripts %}
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-        {% endblock %}
+    {% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('styles/fontawesome-free-5.15.4-web/css/all.css') }}">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
+    {% endblock %}
+    {% block javascripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
+        <script
+                src="https://code.jquery.com/jquery-3.6.0.min.js"
+                integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+                crossorigin="anonymous"></script>
+    {% endblock %}
     {% endblock %}
 </head>
 <body>
@@ -32,7 +39,8 @@
                                 class="fas fa-angle-right"></i></a></li>
             {% endif %}
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                <li class="navbar-element"><a class="navbar-a-element" href="{{ path('app_logout') }}">Log out ( {{ app.user.email }} )<i
+                <li class="navbar-element"><a class="navbar-a-element" href="{{ path('app_logout') }}">Log out
+                        ( {{ app.user.email }} )<i
                                 class="fas fa-angle-right"></i></a></li>
             {% else %}
                 <li class="navbar-element"><a class="navbar-a-element" href="{{ path('login') }}">Log in<i
