--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,7 @@
             <li class="navbar-element"><a class="navbar-a-element" href="{{ path('contact_index') }}">Contact<i
                             class="fas fa-angle-right"></i></a></li>
             {% if is_granted('ROLE_ADMIN') %}
-                <li class="navbar-element"><a class="navbar-a-element" href="{{ path('admin_index') }}">Admin<i
+                <li class="navbar-element"><a class="navbar-a-element" href="{{ path('administration') }}">Admin<i
                                 class="fas fa-angle-right"></i></a></li>
             {% endif %}
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
