added contact form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
 {% block header %}
     <nav class="navbar-container">
         <img class="logo-img" src="{{ asset('assets/logo.png') }}" alt="a text logo">
-        <ul class="navbar-elements">
+        <ul class="navbar-elements" style="margin-bottom: 0">
             <li class="navbar-element"><a class="navbar-a-element" href="{{ path('index') }}">Home<i
                             class="fas fa-angle-right"></i></a></li>
             <li class="navbar-element"><a class="navbar-a-element" href="{{ path('project_index') }}">Projects<i
