--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>the homepage</h2>
+    <div class="container-homepage-title">
+        <h2>Je suis venue vous dire...</h2>
+        <p class="homepage-project-link"><a href="{{ path('project_index') }}">voir mon book</p></a>
+    </div>
 {% endblock %}
