--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -26,7 +26,7 @@ a {
 
 .navbar-container {
     background-color: rgb(255, 222, 89);
-    height: 60px;
+    height: 10vh;
     width: auto;
     display: flex;
     justify-content: center;
@@ -61,6 +61,21 @@ a {
 
 .fa-angle-right {
     margin-right: .2rem;
+}
+
+/*homepage*/
+
+.container-homepage-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    flex-direction: column;
+}
+
+.homepage-project-link {
+    margin-left: 20rem;
 }
 
 /*footer*/
@@ -235,4 +250,16 @@ a {
     color: #28A74B;
     font-size: 1.2rem;
     text-align: center;
+}
+
+/*contact form*/
+
+.container-contact-form {
+    width: 50%;
+    margin: 4rem auto;
+}
+
+.container-confirm-form {
+    width: 50%;
+    margin: 1rem auto;
 }
