--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -5,11 +5,15 @@
 {% block body %}
     <div class="container-projects">
         {% for project in projects %}
-        <div class="container-project">
-            <h2 class="project-title"><i class="fas fa-book-open"></i>{{ project.title }}</h2>
-            <p>{{ project.content }}</p>
-            <span>{{ project.category }}</span>
-        </div>
+            <div class="card" style="width: 18rem; margin: 1rem;">
+                <img class="card-img-top" style="padding: .5rem;" src="https://picsum.photos/200/150" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">{{ project.title }}</h5>
+                    <p class="card-text">{{ project.content }}</p>
+                    <a href="{{ path('project_list', {id: project.id}) }}" style="background-color: #FFDE59;" class="btn">Go somewhere</a>
+                </div>
+            </div>
         {% endfor %}
     </div>
 {% endblock %}
+
